# reed-solomon-32

./: CHANGES.md  Cargo.toml  README.md
benches/: benchmark.rs
examples/: helloworld.rs
src/: buffer.rs  decoder.rs  decoder_impl.rs  encoder.rs  encoder_impl.rs  err.rs  lib.rs  macros.rs
src/gf/: mod.rs  poly.rs  poly_math.rs
tests/: simple.rs
