[package]
name = "reed-solomon-32"
description = "Reed-Solomon BCH encoder and decoder with support of no_std environment"
repository = "https://github.com/DaGenix/reed-solomon-32"
documentation = "https://docs.rs/reed-solomon-32/"
readme = "README.md"
license = "MIT"
keywords = ["ecc", "bch", "no_std"]
authors = ["Mike Lubinets <lubinetsm@yandex.ru>", "Palmer Cox <p@lmercox.com>"]
version = "1.0.0"
edition = "2018"

[dev-dependencies]
criterion = "0.3"

[features]
default = ["std"]
std = []

[[bench]]
name = "benchmark"
harness = false
